# IngenieriaSemestre2

./: CMakeCache.txt  README.md  c-data-structures-master - Shortcut.lnk
Practica01/: Actividad1.c  Actividad3.c  Ejercicio1.c  Practica1.c  main.c
Practicas/: list.c  main.c
Practicas/CodigSuperSimple/: hello.c  main.c  matriz.c  punto.c  punto.h
Practicas/Practica2Matrices/: main.c
Practicas/Practica3/: main.c  pila.c
Practicas/Practica3.1EstructurasFaciles/: main.c
Practicas/Practica3Estructuras/: biblioteca.c  libro.c  main.c
Practicas/Practica3Pila/: libro.c  main.c
Practicas/Practica4LinkedLists/: main.c
Practicas/Practica4Pilas/: global.c  main.c  pila.c
Practicas/Practica4PilasCabezaSeparada/: main.c  pila.c  queue.c
Practicas/Practica5.0LinkedLists/: lista.c  main.c
Practicas/Practica5.1LinkedListsAdvanced/: global.c  listaDoble.c  main.c  myString.c  punto.c
Practicas/Practica5.2ModificacionesDoblesPunteros/: cliente.c  fecha.c  global.c  listaDoble.c  main.c  pila.c  punto.c  queue.c
Practicas/Practica5LinkedLists/: lista.c  main.c
Practicas/Practica6ColasCirulares/: cliente.h  fecha.c  global.h  listaDoble.c  main.c  myString.c  pila.c  queueDoble.c
Practicas/Practica7Includes/: Dot.c  Dot.h  cliente.c  cliente.h  main.c  modulo.c
PracticasPro/: .gitignore  CMakeLists.txt  main.c  nuevaPractica.c  practica5-0.c  practica6-0.c  practica6-Grupo1.c  practica7-0.c  simple.c
PracticasPro/Practica6ColasCirulares/: autor.c  main.c  myRandom.c  myString.c  punto.c
PracticasPro/include/: autor.h  cliente.h  fecha.h  filaCircular.h  filaDoble.h  filaIterador.h  fraccion.h  listaDoble.h  listaDobleCircular.h  listaSimple.h  listaSimpleCircular.h  moduloDeAtencion.h  myNumbers.h  myRandom.h  myString.h  nodo.h  pila.h  queue.h  queueDoble.h
PracticasPro/src/: cliente.c  fecha.c  filaCircular.c  filaDoble.c  filaIterador.c  fraccion.c  libro.c  listaDoble.c  listaDobleCircular.c  listaSimple.c  listaSimpleCircular.c  moduloDeAtencion.c  myNumbers.c  myRandom.c  myString.c  nodo.c  pila.c  queue.c  queueDoble.c
